--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
+*{
+    box-sizing: border-box;
+}
+
 body{
     margin: 0px;
 }
 
 .container{
-    position: relative;
-    width: 96%;
-    max-width: 960px;
+    position: fixed;
+    width: 100vw;
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    
+    align-items: center; 
+    padding: 30px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .fondoPrincipal{
@@ -23,8 +28,8 @@ body{
 .negro{
     position: relative;
     background: #04090D;
-    width: 100vw;
+    width: 100%;
     height: 476px;
     max-width: 370px;
-    margin-top: 12%;
+    margin-bottom: 15%;
 }
