--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body{
     margin: 0px;
+    background-color: black;
 }
 
 .container{
@@ -12,18 +13,38 @@ body{
     display: flex;
     justify-content: center;
     align-items: center; 
-    padding: 30px;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
 }
 
+.flexFondo{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
 .fondoPrincipal{
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100;
+    height: 100%;
     z-index: -1;
+}
+
+@media (min-width: 1050px){
+    .flexFondo{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+        overflow-y: hidden;
+        overflow-x: hidden;
+        box-shadow: 0 0 900px 110px rgb(0, 0, 0) inset;
+    }
 }
 
 .negro{
@@ -42,7 +63,8 @@ body{
     height: 4em;
     border: none;
     border-radius: 50%;
-    top: 5%px;
+    top: 5%;
+    
 }
 
 .canciones{
