--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,13 @@ body{
 }*/      /*creo que esto ya no se usa y se puede eliminar¿?*/
 
 .canciones{
-    width: 20em;
+    width: 30em;
     max-width: 300px;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+    box-sizing: content-box;
+    overflow-y: scroll;
     /*grid-auto-rows: minmax(100px, auto)*/
 }
 
@@ -82,39 +84,21 @@ body{
     font-size: 1em;
 }
 
-.song0{
-    grid-column: 1 / 2;
-    grid-row: 1
+.song{
+display:flex;
+justify-content: space-between;
+align-items: center;
+flex-direction: column;
+box-sizing: border-box;
+width: 100%;
 }
 
-.song1{
-    grid-column: 2 / 2;
-    grid-row: 1
-}
+.song-features{
+display:flex;
+flex-direction: column;
+align-items: center;
+width:50%;
 
-.song2{
-    grid-column: 1 / 2;
-    grid-row: 2
-}
-
-.song3{
-    grid-column: 2 / 2;
-    grid-row: 2
-}
-
-.song4{
-    grid-column: 1 / 2;
-    grid-row: 3
-}
-
-.song5{
-    grid-column: 2 / 2;
-    grid-row: 3
-}
-
-.song6{
-    grid-column: 1 / 2;
-    grid-row: 4
 }
 
 .botonCompartir{
@@ -124,6 +108,8 @@ body{
     border: none;
     border-radius: 50%;
     top: 5%;
+    box-shadow: 0px 0px 96px 10px #8F2C94;
+
 }
 
 .imgCompartir{
